Parser/babble.parser.js
// @generated by Peggy 5.0.6.
//
// https://peggyjs.org/
(function(root) {
  "use strict";
class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Start: peg$parseStart,
  };
  let peg$startRuleFunction = peg$parseStart;

  const peg$c0 = "(";
  const peg$c1 = ")";
  const peg$c2 = "[";
  const peg$c3 = "]";
  const peg$c4 = "{";
  const peg$c5 = "}";
  const peg$c6 = "#{";
  const peg$c7 = "'";
  const peg$c8 = "@";
  const peg$c9 = "^";
  const peg$c10 = "#'";
  const peg$c11 = "#(";
  const peg$c12 = "#_";
  const peg$c13 = "`";
  const peg$c14 = "~";
  const peg$c15 = "~@";
  const peg$c16 = "nil";
  const peg$c17 = "true";
  const peg$c18 = "false";
  const peg$c19 = "::";
  const peg$c20 = ":";
  const peg$c21 = "\"";
  const peg$c22 = "\\";
  const peg$c23 = "n";
  const peg$c24 = "t";
  const peg$c25 = "r";
  const peg$c26 = "newline";
  const peg$c27 = "space";
  const peg$c28 = "tab";
  const peg$c29 = "return";
  const peg$c30 = "-";
  const peg$c31 = ".";
  const peg$c32 = "/";
  const peg$c33 = ";";
  const peg$c34 = "\n";

  const peg$r0 = /^[^"\\]/;
  const peg$r1 = /^[0-9]/;
  const peg$r2 = /^[eE]/;
  const peg$r3 = /^[!$-&*-+<-?A-Z_a-z]/;
  const peg$r4 = /^[a-zA-Z0-9+*!?$%&=<>_:#'.\-\/]/;
  const peg$r5 = /^[ \t\n\r,]/;
  const peg$r6 = /^[^\n]/;

  const peg$e0 = peg$literalExpectation("(", false);
  const peg$e1 = peg$literalExpectation(")", false);
  const peg$e2 = peg$literalExpectation("[", false);
  const peg$e3 = peg$literalExpectation("]", false);
  const peg$e4 = peg$literalExpectation("{", false);
  const peg$e5 = peg$literalExpectation("}", false);
  const peg$e6 = peg$literalExpectation("#{", false);
  const peg$e7 = peg$literalExpectation("'", false);
  const peg$e8 = peg$literalExpectation("@", false);
  const peg$e9 = peg$literalExpectation("^", false);
  const peg$e10 = peg$literalExpectation("#'", false);
  const peg$e11 = peg$literalExpectation("#(", false);
  const peg$e12 = peg$literalExpectation("#_", false);
  const peg$e13 = peg$literalExpectation("`", false);
  const peg$e14 = peg$literalExpectation("~", false);
  const peg$e15 = peg$literalExpectation("~@", false);
  const peg$e16 = peg$literalExpectation("nil", false);
  const peg$e17 = peg$literalExpectation("true", false);
  const peg$e18 = peg$literalExpectation("false", false);
  const peg$e19 = peg$literalExpectation("::", false);
  const peg$e20 = peg$literalExpectation(":", false);
  const peg$e21 = peg$literalExpectation("\"", false);
  const peg$e22 = peg$literalExpectation("\\", false);
  const peg$e23 = peg$classExpectation(["\"", "\\"], true, false, false);
  const peg$e24 = peg$literalExpectation("n", false);
  const peg$e25 = peg$literalExpectation("t", false);
  const peg$e26 = peg$literalExpectation("r", false);
  const peg$e27 = peg$anyExpectation();
  const peg$e28 = peg$literalExpectation("newline", false);
  const peg$e29 = peg$literalExpectation("space", false);
  const peg$e30 = peg$literalExpectation("tab", false);
  const peg$e31 = peg$literalExpectation("return", false);
  const peg$e32 = peg$literalExpectation("-", false);
  const peg$e33 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e34 = peg$literalExpectation(".", false);
  const peg$e35 = peg$classExpectation(["e", "E"], false, false, false);
  const peg$e36 = peg$literalExpectation("/", false);
  const peg$e37 = peg$classExpectation(["!", ["$", "&"], ["*", "+"], ["<", "?"], ["A", "Z"], "_", ["a", "z"]], false, false, false);
  const peg$e38 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "+", "*", "!", "?", "$", "%", "&", "=", "<", ">", "_", ":", "#", "'", ".", "-", "/"], false, false, false);
  const peg$e39 = peg$classExpectation([" ", "\t", "\n", "\r", ","], false, false, false);
  const peg$e40 = peg$literalExpectation(";", false);
  const peg$e41 = peg$classExpectation(["\n"], true, false, false);
  const peg$e42 = peg$literalExpectation("\n", false);

  function peg$f0(forms) {    return forms.map(f => f[0]);  }
  function peg$f1(forms) {
    return { type: "list", value: forms.map(f => f[0]) };
  }
  function peg$f2(forms) {
    return { type: "vector", value: forms.map(f => f[0]) };
  }
  function peg$f3(pairs) {
    return { type: "map", value: pairs.map(p => p[0]) };
  }
  function peg$f4(key, value) {
    return { key: key, value: value };
  }
  function peg$f5(forms) {
    return { type: "set", value: forms.map(f => f[0]) };
  }
  function peg$f6(form) {
    return { type: "quote", value: form };
  }
  function peg$f7(form) {
    return { type: "deref", value: form };
  }
  function peg$f8(metadata, form) {
    return { type: "meta", metadata: metadata, value: form };
  }
  function peg$f9(form) {
    return { type: "var-quote", value: form };
  }
  function peg$f10(forms) {
    return { type: "fn", value: forms.map(f => f[0]) };
  }
  function peg$f11(form) {
    return { type: "discard", value: form };
  }
  function peg$f12(form) {
    return { type: "syntax-quote", value: form };
  }
  function peg$f13(form) {
    return { type: "unquote", value: form };
  }
  function peg$f14(form) {
    return { type: "unquote-splicing", value: form };
  }
  function peg$f15() {
    return { type: "nil", value: null };
  }
  function peg$f16() {
    return { type: "boolean", value: true };
  }
  function peg$f17() {
    return { type: "boolean", value: false };
  }
  function peg$f18(name) {
    return { type: "keyword", value: "::" + name, auto: true };
  }
  function peg$f19(name) {
    return { type: "keyword", value: ":" + name };
  }
  function peg$f20(chars) {
    return { type: "string", value: chars.join("") };
  }
  function peg$f21(char) {    return char;  }
  function peg$f22() {    return "\n";  }
  function peg$f23() {    return "\t";  }
  function peg$f24() {    return "\r";  }
  function peg$f25() {    return '"';  }
  function peg$f26() {    return "\\";  }
  function peg$f27(char) {    return char;  }
  function peg$f28(name) {
    return { type: "character", value: name };
  }
  function peg$f29() {    return "\n";  }
  function peg$f30() {    return " ";  }
  function peg$f31() {    return "\t";  }
  function peg$f32() {    return "\r";  }
  function peg$f33(char) {    return char;  }
  function peg$f34(sign, digits, decimals, exp) {
    const numStr = (sign || "") + digits.join("") + "." + decimals.join("") + (exp ? exp.flat().join("") : "");
    return { type: "float", value: parseFloat(numStr) };
  }
  function peg$f35(sign, digits) {
    return { type: "integer", value: parseInt((sign || "") + digits.join(""), 10) };
  }
  function peg$f36(sign, num, denom) {
    return { 
      type: "ratio", 
      numerator: parseInt((sign || "") + num.join(""), 10), 
      denominator: parseInt(denom.join(""), 10) 
    };
  }
  function peg$f37(name) {
    return { type: "symbol", value: name };
  }
  function peg$f38(ns, chars, name, rest) {
    return ns + chars.join("") + "/" + name + rest.join("");
  }
  function peg$f39(start, chars) {
    return start + chars.join("");
  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = [];
    s3 = peg$currPos;
    s4 = peg$parseForm();
    if (s4 !== peg$FAILED) {
      s5 = peg$parse_();
      s4 = [s4, s5];
      s3 = s4;
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$currPos;
      s4 = peg$parseForm();
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        s4 = [s4, s5];
        s3 = s4;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
    }
    peg$savedPos = s0;
    s0 = peg$f0(s2);

    return s0;
  }

  function peg$parseForm() {
    let s0;

    s0 = peg$parseList();
    if (s0 === peg$FAILED) {
      s0 = peg$parseVector();
      if (s0 === peg$FAILED) {
        s0 = peg$parseMap();
        if (s0 === peg$FAILED) {
          s0 = peg$parseSet();
          if (s0 === peg$FAILED) {
            s0 = peg$parseReaderMacro();
            if (s0 === peg$FAILED) {
              s0 = peg$parseLiteral();
              if (s0 === peg$FAILED) {
                s0 = peg$parseSymbol();
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseList() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c0;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = [];
      s4 = peg$currPos;
      s5 = peg$parseForm();
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        s5 = [s5, s6];
        s4 = s5;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$currPos;
        s5 = peg$parseForm();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          s5 = [s5, s6];
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      }
      if (input.charCodeAt(peg$currPos) === 41) {
        s4 = peg$c1;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s4 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f1(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseVector() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 91) {
      s1 = peg$c2;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = [];
      s4 = peg$currPos;
      s5 = peg$parseForm();
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        s5 = [s5, s6];
        s4 = s5;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$currPos;
        s5 = peg$parseForm();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          s5 = [s5, s6];
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      }
      if (input.charCodeAt(peg$currPos) === 93) {
        s4 = peg$c3;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s4 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f2(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseMap() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 123) {
      s1 = peg$c4;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = [];
      s4 = peg$currPos;
      s5 = peg$parseMapPair();
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        s5 = [s5, s6];
        s4 = s5;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$currPos;
        s5 = peg$parseMapPair();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          s5 = [s5, s6];
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      }
      if (input.charCodeAt(peg$currPos) === 125) {
        s4 = peg$c5;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s4 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f3(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseMapPair() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseForm();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseForm();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f4(s1, s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSet() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c6) {
      s1 = peg$c6;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = [];
      s4 = peg$currPos;
      s5 = peg$parseForm();
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        s5 = [s5, s6];
        s4 = s5;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$currPos;
        s5 = peg$parseForm();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          s5 = [s5, s6];
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      }
      if (input.charCodeAt(peg$currPos) === 125) {
        s4 = peg$c5;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s4 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f5(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseReaderMacro() {
    let s0;

    s0 = peg$parseUnquoteSplice();
    if (s0 === peg$FAILED) {
      s0 = peg$parseQuote();
      if (s0 === peg$FAILED) {
        s0 = peg$parseDeref();
        if (s0 === peg$FAILED) {
          s0 = peg$parseMeta();
          if (s0 === peg$FAILED) {
            s0 = peg$parseSyntaxQuote();
            if (s0 === peg$FAILED) {
              s0 = peg$parseUnquote();
              if (s0 === peg$FAILED) {
                s0 = peg$parseDispatch();
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseQuote() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 39) {
      s1 = peg$c7;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e7); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseForm();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f6(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDeref() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 64) {
      s1 = peg$c8;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e8); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseForm();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f7(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseMeta() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 94) {
      s1 = peg$c9;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e9); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseForm();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parseForm();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f8(s3, s5);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDispatch() {
    let s0, s1, s2, s3, s4, s5, s6;
